deploy-helpdesk.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: helpdesk
---
apiVersion: v1
kind: Service
metadata:
  name: helpdesk-svc
  labels:
    app: helpdesk-svc
  namespace: helpdesk
spec:
  ports:
    - port: 80
  selector:
    app: glpi-helpdesk
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi-helpdesk
  labels:
    app: glpi-helpdesk
  namespace: helpdesk
spec:
  selector:
    matchLabels:
      app: glpi-helpdesk
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: glpi-helpdesk
    spec:
      containers:
        - name: glpi-helpdesk
          image: diouxx/glpi:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: glpi-pvc
              mountPath: /var/www/html
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "60"]
        - name: mysql
          image: mysql:latest
          volumeMounts:
            - name: mysql-pvc
              mountPath: /var/lib/mysql
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "60"]
      volumes:
        - name: glpi-pvc
          persistentVolumeClaim:
            claimName: glpi-pvc
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helpdesk-ingress
  namespace: helpdesk
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  rules:
    - host: helpdesk.yourdomain.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helpdesk-svc
                port:
                  number: 80
  tls:
  - hosts:
    - helpdesk.yourdomain.fr
    secretName: helpdesk-your-domain-fr-site-cert
